spacing fix

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -612,5 +612,5 @@ textarea:focus {
 }
 
 .other-information-wrapper {
-  margin-top: 2rem;
+  margin-top: 2.7rem;
 }
